--- a/html/events.html
+++ b/html/events.html
@@ -13,7 +13,7 @@
     <nav class="nav">
         <ul class="ul">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="../html/About.html">About</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
