home & contact us

--- a/html/About.html
+++ b/html/About.html
@@ -9,15 +9,19 @@
 <body>
     <div class="glass-container">
         <div class="glass-content">
-
-    <nav class="nav">
-        <ul class="ul">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="../html/events.html">Events</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <img src="./images/Alu_logo.png" alt="alu-logo">
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact-us.html">Contact us</a></li>
+            </ul>
+        </nav>
+        <h1>Welcome to Alumni Connect</h1>
+        <p>Your gateway to future opportunities and cherished memories</p>
+    </header>
 
     <section>
         <div class="main-container">
@@ -40,7 +44,7 @@
                 </div>
                 <div class="grass-2">
                     <p>
-                        Niyomugabo Jean Pierre, Software engineering student at ALU, with expertise in bash scripting, css and html, python, javascript, and github.
+                        niyongabo Jean Pierre, Software engineering student at ALU, with expertise in bash scripting, css and html, python, javascript, and github.
                     </p>
                     <p>
                         <span class="email"> Email: </span> <span>J.niyongabo@alustudent.com</span>
@@ -52,4 +56,8 @@
 </div>
 </div>
 </body>
+    <footer>
+      <p>© 2018 AlumniConnect</p>
+    </footer>
+
 </html>
