--- a/html/events.html
+++ b/html/events.html
@@ -9,16 +9,20 @@
 <body>
     <div class="glass-container">
         <div class="glass-content">
-
-    <nav class="nav">
-        <ul class="ul">
-            <li><a href="#">Home</a></li>
-            <li><a href="../html/About.html">About</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-
+            
+    <header>
+        <nav>
+            <img src="./images/Alu_logo.png" alt="alu-logo">
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact-us.html">Contact us</a></li>
+            </ul>
+        </nav>
+        <h1>Here are the available events</h1>
+        <p>feel free to explore and also reserve any if you want</p>
+    </header>
     <section>
         <div class="main-container">
             <div class="min-container">
@@ -116,5 +120,8 @@
     </section>
 </div>
 </div>
+    <footer>
+      <p>© 2018 AlumniConnect</p>
+    </footer>
 </body>
 </html>
