fix some linking and pages

--- a/html/home.html
+++ b/html/home.html
@@ -11,9 +11,9 @@
         <nav>
             <img src="./images/Alu_logo.png" alt="alu-logo">
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="About.html">About</a></li>
                 <li><a href="contact-us.html">Contact us</a></li>
             </ul>
         </nav>
