--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="../html/home.html">Home</a></li>
                 <li><a href="../html/events.html">Events</a></li>
-                <li><a href="../html/about.html">About</a></li>
+                <li><a href="../html/About.html">About</a></li>
                 <li><a href="#">Contact us</a></li>
             </ul>
         </nav>
